[package]
name = "cross-krb5"
authors = ["Eric Stokes <letaris@gmail.com>"]
version = "0.4.1"
edition = "2021"
license = "MIT"
description = "Safe cross platform Kerberos v5 interface"
homepage = "https://github.com/estokes/cross-krb5"
documentation = "https://docs.rs/cross-krb5"
readme = "README.md"
keywords = ["kerberos", "krb5", "gssapi", "sspi", "authentication"]
categories = ["cryptography"]

[features]
default = ["iov"]
iov = ["libgssapi/iov"]

[target.'cfg(unix)'.dependencies.libgssapi]
version = "0.9.0"
path = "../libgssapi/libgssapi"
default-features = false

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Security_Authentication_Identity",
    "Win32_Security_Credentials",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Time"
]

[dependencies]
anyhow = "1"
bytes = "1"
bitflags = "2"
